--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<p> Hello World </p>
+<!DOCTYPE html>
+
+<html>
+
+<head>
+
+<title>Page Title</Title>
+
+<meta charset="utf-8"
+
+</head>
+
+    <body>
+
+
+    <p> Hello World </p>
+    
+    </body>
+    
+</html>
