--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
 
 <title>Learn enough to be dangerous</Title>
 
-<meta charset="utf-8"
+<meta charset="utf-8">
 
 </head>
 
-    <body>
+  <body>
+  
+  	<div>
+  	
+  	<a href="index.html">Home</a>
+  	
+  	<a href="moby_dick.html">Moby Dick</a>
+  	
+  	<a href="tags.html">HTML Tags</a>
+  	
+  	</div>
+  	
+  	
 
 
     <h1>The Learn Enough Story</h1>
